<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvCartItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:maxEms="5"
        android:singleLine="false"
        android:text="@string/product_title"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvCartItemPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCartItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/price"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvCartItemDiscount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCartItemTitle"
        app:layout_constraintTop_toTopOf="@+id/tvCartItemTitle" />

    <TextView
        android:id="@+id/tvCartItemDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/discount"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvCartItemDiscountPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCartItemPrice"
        app:layout_constraintTop_toTopOf="@+id/tvCartItemPrice" />

    <TextView
        android:id="@+id/tvCartItemDiscountPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/price_with_discount"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCartItemDiscount"
        app:layout_constraintTop_toTopOf="@+id/tvCartItemDiscount" />

</androidx.constraintlayout.widget.ConstraintLayout>