<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/tvHeaderProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/product_title"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/tvHeaderPrice"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHeaderPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/price"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/tvHeaderDiscount"
            app:layout_constraintStart_toEndOf="@+id/tvHeaderProductName"
            app:layout_constraintTop_toTopOf="@id/tvHeaderProductName" />

        <TextView
            android:id="@+id/tvHeaderDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/discount"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/tvHeaderDiscountPrice"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvHeaderPrice"
            app:layout_constraintTop_toTopOf="@id/tvHeaderPrice" />

        <TextView
            android:id="@+id/tvHeaderDiscountPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/price_with_discount"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvHeaderDiscount"
            app:layout_constraintTop_toTopOf="@id/tvHeaderDiscount" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/checkoutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderProductName">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingBottom="225dp"
                tools:layout_editor_absoluteX="10dp" />
        </ScrollView>

        <Button
            android:id="@+id/checkoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Оплата"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>